# vast-migration

./: .env.example  .gitignore  README.md  TODO.md  config.py  main.py  pyproject.toml
input/: drives-archived-data.example.csv  drives-to-process.example.csv
models/: __init__.py  quota.py  research_drive.py  research_drive_groups.py  research_drive_project.py  view.py
services/: __init__.py  project_db_api.py  vast_api.py
tests/: test_config.py  test_main.py  test_project_db_api.py  test_vast_api.py
