[project]
name = "vast-migration"
version = "0.1.0"
description = "Set up views and quotas in Vast Data prior to migrating from Unifiles"
requires-python = ">=3.14"

dependencies = [
    "httpx>=0.27",
    "httpx-retries>=0.5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "python-barbicanclient>=7.4.0",
    "vastpy>=0.3.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
